			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2807 2005/10/15 08:22:39 suz Exp $

<200510>
2005-10-15  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c: fixed a MLDv2-kernel crash when 
	  an inappropriate address is given to IPV6_JOIN_GROUP API

2005-10-15  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* raw_ip6.c (rip6_attach): caught failure of MALLOC for
	icmp6_filter.  The old code could dereference to a NULL pointer in
	the failure case.

2005-10-08  SUZUKI, Shinsuke <suz@alaxala.net>
	* removed the following multicast-related programs, since they are 
	  now maintained/developed/released in mcast-tools project.
		pim6sd (including mtrace6) pim6dd mfc mcastsend mcastread pmsft

<200509>
Tue Sep 20 14:09:07 JST 2005	keiichi@iijlab.net
	*kame/{free|net}bsd/lib/libipsec
	stop installing libipsec.  The main user of the library was
	racoon, but racoon is not distributed from the KAME kit
	(instead, it is provided from ipsec-tools with libipsec).  We
	don't have a strong reason to install the library now.

	also, the basic functions of the libipsec are already being
	provided from the base distributions of FreeBSD and NetBSD.

2005-09-16  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/kame/dhcp6:
	- support compilation on linux
	- dhcp6relay can listen to multiple interfaces
	- dhcp6s ignores the received DHCP message unless it comes from the 
	  listening interface
	Contributed by: Francis Dupont

2005-09-15  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c: removed IPPROTO_SCTP from the
	explore array for SOCK_DGRAM, according to the usage described in
	draft-ietf-tsvwg-sctpsocket-11.txt.
	Also removed IPPROTO_DCCP entries altogether, since returning DCCP
	addrinfo for SOCK_DGRAM has a bad effect on some existing UDP
	applications.  We'll need to revisit this once the DCCP API is
	fixed.

	This change fixes the problem that name resolution performed in
	the KAME snap resolver has been failing on FreeBSD 5.4R.
